--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                     <div class="tool-card-img">
                         <i class="fas fa-compress-alt"></i>
                     </div>
-                    <a href="/tool/img-compress.html" class="tool-card-link">
+                    <a href="/image-compression/img-compress.html" class="tool-card-link">
                         <div class="tool-card-content">
                             <h3>Image Compressor</h3>
                             <p>Reduce image file size without losing quality. Supports JPG, PNG, and WebP formats.</p>
