--- a/img-compress.html
+++ b/img-compress.html
@@ -445,11 +445,11 @@
     <main class="container">
         <div class="ad-container">
             <!-- Google AdSense Banner Ad -->
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID"></script>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-7141418631701579/5157282277"></script>
             <!-- Replace YOUR_ADSENSE_ID with your actual AdSense ID -->
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="ca-pub-YOUR_ADSENSE_ID"
+                 data-ad-client="ca-app-pub-7141418631701579/5157282277"
                  data-ad-slot="YOUR_AD_SLOT_ID"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
@@ -539,12 +539,12 @@
 
                 <div class="ad-container">
                     <!-- Google AdSense In-Article Ad -->
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID"></script>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-7141418631701579/2531118939"></script>
                     <ins class="adsbygoogle"
                          style="display:block; text-align:center;"
                          data-ad-layout="in-article"
                          data-ad-format="fluid"
-                         data-ad-client="ca-pub-YOUR_ADSENSE_ID"
+                         data-ad-client="ca-app-pub-7141418631701579/2531118939"
                          data-ad-slot="YOUR_AD_SLOT_ID"></ins>
                     <script>
                          (adsbygoogle = window.adsbygoogle || []).push({});
