--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+
+  <!DOCTYPE html>
+  <html lang="mr">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Image Compression</title>
+  </head>
+  <body>
+      <h1>Welcome to Image Compression</h1>
+      <p>Compress your images here.</p>
+  </body>
+  </html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
